# PollutionSensor

./: .gitignore  .gitmodules  CMakeLists.txt  PollutionSensor.org  README.md  cpp.txt  example.cpp  main.cpp  sqr.cpp  sqr.h  test1.cpp
.github/workflows/: tests.yml
ExampleCMakeLib/: CMakeLists.txt  sqr.h
Figures/DrawIO/: 6mmPushbutton.drawio  JSTHeader4WayStemma.drawio  Sequence.drawio  Untitled Diagram.drawio
Hardware/PiHat/: PiHatVeroPrototype.vrt
PollutionSensor/: PollutionSensor.org
examples/: CMakeLists.txt  neo6mExample  neo6mExample.cpp
src/: CMakeLists.txt  SPS30Thread.cpp  example.cpp  i2c commands + response lengths.txt  libsps30.cpp  libsps30.h  main  main.cpp  sps30.cpp  sps30.h  sps30demo  sps30demo.cpp  sps30lib.h  sps30manager.cpp  try1.cpp  try1.h
src/GPS/: CMakeLists.txt  neo6m.cpp  neo6m.h  neo6mDemo.cpp
src/GitWrapper/: CMakeLists.txt  DemoGitWrapper.cpp  commiter.sh  gitWrapper.cpp  gitWrapper.h  pollSenseKey  pollSenseKey.pub
src/OLED/: 1306.cpp  SSD1306.h
src/SPS30/: CMakeLists.txt  libsps30.cpp  libsps30.h  sps30demo.cpp
src/StateMachine/: CMakeLists.txt  stateMachine.cpp  stateMachine.h  stateMachineFunctionsDemo.cpp
src/StateMachine/failedClassAttempt/: CMakeLists.txt  stateMachine.cpp  stateMachine.h  stateMachineDemo.cpp
src/StorageHandler/: CMakeLists.txt  storageHandler.cpp  storageHandler.h  storageHandlerDemo.cpp
src/UserInteface/: CMakeLists.txt  displayHandler.h  inputHandler.h  menuHandler.cpp
src/UserInterface/: CMakeLists.txt  DemoUserInterface.cpp  displayHandler.cpp  displayHandler.h  inputHandler.cpp  inputHandler.h  menuData.cpp  menuData.h  menuHandler.cpp  menuHandler.h  menuOptions.cpp  menuOptions.h
src/referenceCPP/: SPS30Thread.h  sps30lib.cpp  sps30lib.h  sps30manager_x.cpp
sshAuth/: sshAuthNotes.org
sshAuth/sshChris/: chris_Pi.pub
sshAuth/sshLily/: id_ed25519.pub
test/: CMakeLists.txt  neo6m_test  neo6m_test.cpp  test1.cpp  test_gitwrapper.cpp  test_neo6m.cpp  test_sps30Lib.cpp  test_sps30Lib.h
test/GitWrapperTestDir/: readme.txt
test/Testing/Temporary/: LastTest.log.tmp
